--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2254,16 +2254,13 @@ analytic conductor of $f$ for some specific choices of $I$.
       </a>
       <br>
       <a href="../trucs/Collaborators2025.png">
-	<font face="Comic sans MS" size="+1" color="black">
-	  <it> Repartition my co-authors per country (2025)
-	  </it>
-	</font>
+	  <sl> Repartition my co-authors per country (2025)
+	  </sl>
       </a>
+      &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="../trucs/Collaborators2025.png">
-	<font face="Comic sans MS" size="+1" color="black">
-	  <it> Countries of journals where I published (2025)
-	  </it>
-	</font>
+	  <sl> Countries of journals where I published (2025)
+	  </sl>
       </a>
 </center>
     <br>
