--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2258,7 +2258,7 @@ analytic conductor of $f$ for some specific choices of $I$.
 	  </sl>
       </a>
       &nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="../trucs/Collaborators2025.png">
+      <a href="../trucs/Journals2025.png">
 	  <sl> Countries of journals where I published (2025)
 	  </sl>
       </a>
