--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -976,7 +976,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       N}\Bigl(\sum_{\substack{d|n}}\lambda(d)\Bigr)^2/n
       \le
       3.1\,\frac{\log N}{\log (z_2/z_1)}
-      \frac{\tau^2+\tau+1.7}{\tau-1}
+      \frac{1.301(1+\tau^2)+1.084(1+\tau)-0.116}{\tau-1}
       $
       when $N\ge z_1\ge100$ and  $z_2=z_1^\tau$ for some $\tau>1$. 
       Two related estimates are also proved.
