--- a/index.html
+++ b/index.html
@@ -178,6 +178,27 @@ MathJax.Hub.Config({
 <hr width="70%" color="blue" />
 </center>
 
+<center>Voici une 
+<a href="./trucs/InterviewSandrine09-06-2011.mp3">
+interview</a>
+r&eacute;alis&eacute;e par 
+<a href="https://fr.wikipedia.org/wiki/Sandrine_Vendel"
+   style="text-decoration:none; color:#666666;font-style: oblique;font-variant:small-caps;font-weight:bolder;">
+Sandrine Vendel
+</a> pour le Mouv' en 2011.</center>
+<center>
+  Et <a href="./Store/DongaScience2019.pdf">"Avec passion et efforts, d&eacute;fiez la
+  conjecture de Goldbach !"</a>,  </center>
+<center> de Young Jun Choi en 2019 pour le magazine
+  cor&eacute;en <a href="http://dongascience.donga.com/">Donga Science</a>.
+  </center>
+
+
+
+<center>
+<hr width="70%" size=10 color="blue">
+</center>
+
 <a name="Edition" class="dontmention"></a>
 <table>
   <tr>
@@ -318,38 +339,18 @@ width=490 height=95 alt="N'Autre &Eacute;cole"
 
  
 
-<center>Voici une 
-<a href="./trucs/InterviewSandrine09-06-2011.mp3">
-interview</a>
-r&eacute;alis&eacute;e par 
-<a href="https://fr.wikipedia.org/wiki/Sandrine_Vendel"
-   style="text-decoration:none; color:#666666;font-style: oblique;font-variant:small-caps;font-weight:bolder;">
-Sandrine Vendel
-</a> pour le Mouv' en 2011.</center>
-<center> Un
-  certificat <a href="./Store/Certificado_palestrante_Prof_Olivier_Ramare_assinado.pdf">br&eacute;silien.</a>
-  </center>
-<center>
-  Et <a href="./Store/DongaScience2019.pdf">"Avec passion et efforts, d&eacute;fiez la
-  conjecture de Goldbach !"</a>,  </center>
-<center> de Young Jun Choi en 2019 pour le magazine
-  cor&eacute;en <a href="http://dongascience.donga.com/">Donga Science</a>.
-  </center>
 
-
-
-<center>
-<hr width="70%" size=10 color="blue">
-</center>
-
-
-<a name="Zentralblatt" class="dontmention"></a>
+<a name="GrandPublic"> <font size=+2>Quelques liens venus d'ailleurs :</font>
+</a>
+<br>
+  <br>
+<div class="w3-cell-row-lessgray">
+  <a name="Zentralblatt" class="dontmention"></a>
 <font size=+2>
-<center style="background:#FFDD99;padding:9px 4px 9px 4px;-webkit-border-radius: 8px 8px 8px 8px;
+<center style="padding:9px 4px 9px 4px;-webkit-border-radius: 8px 8px 8px 8px;
     -moz-border-radius: 8p 8px 8px 8px;
     border-radius: 8px 8px 8px 8px;">
   <img src="trucs/pSam9.png" style="width:100px; text-align:center;">
-&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;
 <span style="text-align:center;">Free access to 
@@ -378,13 +379,8 @@ Sandrine Vendel
   data-size="banner">
 </div>
 </center>
-
-<center>
-<hr width="70%" size=10 color="blue">
-</center>
- 
-<a name="GrandPublic"> <font size=+2>Quelques liens venus d'ailleurs :</font>
-</a>
+</div>
+<br>
 
 <div class="w3-cell-row-lessgray">
   <div >
