--- a/index.html
+++ b/index.html
@@ -382,13 +382,47 @@ width=490 height=95 alt="N'Autre &Eacute;cole"
 </div>
 <br>
 
-<div class="w3-cell-row-lessgray">
-  <div >
-    <br>
-  <img src="trucs/UmmonoiRootBridge-Meghalaya-2020-moyen.JPG" height="400px"
-       title="The Ummonoi Root Bridge, Meghalaya, 2019">
-  </div>
+  <br>
 
+
+
+<div class="w3-cell-row-lessgray">
+   <a href="https://www.cimpa.info/en"><img src="trucs/Cimpa.png" height="260px"
+       title="Registering to Cimpa">
+    </a>
+   </div>
+   <div class="w3-cell-row-lessgray">
+     <div class="w3-container w3-cell">
+	  <ul>
+	    <li><font size=+2>CIMPA</font></li>
+	    <li>&nbsp;</li>
+	    <li><a href="https://www.facebook.com/cimpa.communication/">Facebook</a>
+	    </li>
+	    <li>	    Instagram: cimpa_math
+	    </li>
+	  </ul>
+     </div>
+     <div class="w3-container w3-cell">
+	  <img src="trucs/Cimpa-conf.png" height="200px"
+	       title="Cimpa crowds">
+	  </div>
+	  <div class="w3-container w3-cell">
+	  <img src="trucs/Cimpa-thoughts.jpg" height="200px"
+	       title="Thinking hard">
+	  
+    </div>
+      </div>
+
+      
+  <br>
+
+<div class="w3-cell-row-lessgray">
+  <div class="w3-container w3-cell">
+  <font size=+2>
+    <img src="trucs/UmmonoiRootBridge-Meghalaya-2020-moyen.JPG" height="400px"
+       title="The Ummonoi Root Bridge, Meghalaya, 2019">
+    </font>
+    </div>
   <div class="w3-container w3-cell">
 
     <ul class="liens">
@@ -436,7 +470,7 @@ nombres complexes et la notion de fibration. </li>
     H. Wada et D. Wiens : il
     s'agit d'un polyn&ocirc;me de degr&eacute; total 25 en 26 variables,
     &agrave; coefficients entiers, et dont l'ensemble des valeurs positives,
-    prises lorsque les variables d&eacute;crivent les est entiers
+    prises lorsque les variables d&eacute;crivent les entiers
     positifs, exactement l'ensemble des nombres premiers.</li>
 <li> <a href="http://mathschine.univ-lille1.fr/" class="someword">
 Le calcul &agrave; baguettes en Chine ancienne.
