--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ width=490 height=95 alt="N'Autre &Eacute;cole"
 
 
 <div class="w3-cell-row-lessgray">
-   <a href="https://www.cimpa.info/en"><img src="trucs/Cimpa.png" height="260px"
+   <a href="https://www.cimpa.info/en"><img src="trucs/Cimpa.png" width="100%"
        title="Registering to Cimpa">
     </a>
    </div>
