--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ class="someword">O&ugrave; en sont les math&eacute;matiques ?</a>
 <li>
 Pr&eacute;sentation en <a href="https://www.experimentarium.fr/bds"
    class="someword">Bandes dessin&eacute;es
-   scientifiques</a> de sujets scientifiques ! Rapides, pr&eacute;cis et
+   scientifiques</a> de sujets scientifiques ! Rapides, pr&eacute;cises et
    visuelles, un r&eacute;gal ! 
 </li>
 
