--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ nombres complexes et la notion de fibration. </li>
     s'agit d'un polyn&ocirc;me de degr&eacute; total 25 en 26 variables,
     &agrave; coefficients entiers, et dont l'ensemble des valeurs positives,
     prises lorsque les variables d&eacute;crivent les entiers
-    positifs, exactement l'ensemble des nombres premiers.</li>
+    positifs, est exactement l'ensemble des nombres premiers.</li>
 <li> <a href="http://mathschine.univ-lille1.fr/" class="someword">
 Le calcul &agrave; baguettes en Chine ancienne.
 </a></li>
