--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -925,7 +925,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
                "BV-Mobius-IdentityFactory.pdf", 2023, 30, "Submitted");
       nbrp();</script>
     <div class="resumecontent">
-      <img src="../trucs/Sebastian.jpg" width="128px"
+      <img src="../trucs/Sebastian.png" width="128px"
 	   title="Sebastian Zuniga Alterman">
       <img src="../trucs/balazard.jpg" width="128px"
 	   title="Michel Balazard">
@@ -948,7 +948,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
                "", 2023, 30, "Submitted");
       nbrp();</script>
     <div class="resumecontent">
-      <img src="../trucs/Sebastian.jpg" width="128px"
+      <img src="../trucs/Sebastian.png" width="128px"
 	   title="Sebastian Zuniga Alterman">
       We first provide numerical bounds for $\Sigma_\varepsilon(X)=\sum_{\substack{d_1,d_2\le
       X}}\frac{\mu(d_1)\mu(d_2)}{[d_1,d_2]^{1+\varepsilon}}$. We show in particular
@@ -968,7 +968,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
 	    "http://dx.doi.org/");
       nbr();</script>
     <div class="resumecontent">
-      <img src="../trucs/Sebastian.jpg" width="128px"
+      <img src="../trucs/Sebastian.png" width="128px"
 	   title="Sebastian Zuniga Alterman">
      The Barban-Vehov weights being defined below, we prove that
       $\displaystyle
