--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -925,9 +925,9 @@ all moduli $k \le 72$&nbsp; and other small moduli.
                "BV-Mobius-IdentityFactory.pdf", 2023, 30, "Submitted");
       nbrp();</script>
     <div class="resumecontent">
-      <img src="../trucs/Sebastian.png" width="128px"
+      <img src="../trucs/Sebastian.png" height="128px"
 	   title="Sebastian Zuniga Alterman">
-      <img src="../trucs/balazard.jpg" width="128px"
+      <img src="../trucs/balazard.jpg" height="128px"
 	   title="Michel Balazard">
 	We study the sums
 	$\sum_{n\le X, (n,q)=1}\frac{\mu(n)\log(X/n)^k}{n^s}$  in an
