--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -448,10 +448,12 @@ of A. S&aacute;rk&ouml;zy.
   </li>
   <!-- ============================= -->
     <li class="paper"><script language="javascript">
-	ToAppear("A spectral resolution of the large sieve",
+	Paper("A spectral resolution of the large sieve",
 	      "", "LSE-46-N-04-submitted-1.pdf",
 	      "https://smf.emath.fr/publications/bulletin-de-la-societe-mathematique-de-france",
-	      "Bulletin de la Soci&eacute;t&eacute; Math&eacute;matique de France", 2024, 63);
+	      "Bulletin de la Soci&eacute;t&eacute; Math&eacute;matique de France",
+	      "vol. 153 no 3", 2025, "575--636",
+	     "");
 	nbr();</script>
       <div class="resumecontent">
 	The quadratic form
