--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -345,7 +345,7 @@ an additive asymptotic basis whose order is very well controled.
     <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
 	Preprint("On long $\\kappa$-tuples: small values of $\\kappa$",
-	"", "HRIW-Numerical-4.pdf", 2010, 16, "");
+	"", "RudinInequality-11-Arxiv.pdf", 2025, 17, "");
 	nbrp();</script>
       <div class="resumecontent">
 	This paper is the sequel of the previous one. I did not publish it at the
@@ -1918,6 +1918,28 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       </div>
     </li>
     
+  <!-- ============================= -->
+ <li class="paper preprint"><script language="javascript">
+	Preprint("Rudin Inequality, Chang Theorem, primes and squares",
+	"", "HRIW-Numerical-4.pdf", 2010, 16, "");
+	nbrp();</script>
+      <div class="resumecontent">
+	We prove that the set of large values of
+the trigonometric polynomial over a subset of density of the primes has some additive structure, similarly to what happens for
+subsets of densities in $\mathbb{Z}/{N}\mathbb{Z}$ but in a weaker form.
+To do so, we prove large sieve inequalities for \emph{dissociate sets}
+$\mathcal{X}$ of circle 
+points and functions $f$ whose support~$S$ is finite and
+respectively in an interval, in
+the set of primes or in the set of squares. Set
+$T(f,x)=\sum_{n}f(n)\exp(2i\pi nx)$. These inequalities are of
+the shape $\sum_{x\in\mathcal{X}}|T(f,x)|^2\ll
+|S|\|f\|_2^2\log(8R/|S|)$ where $R$ is respectively $N$, $N/\log
+N$ and $\sqrt{N}$. The implied constants depend on
+the spacement between sumsets of~$\mathcal{X}$.
+      </div>
+    </li>
+
   <!-- ============================= -->
 
 
