--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1137,10 +1137,13 @@ $
       </div>
       </li>
         <!-- ============================= -->
-    <li class="paper preprint"><script language="javascript">
-	Preprint("The trigonometric polynomial on sums of two squares, an additive problem and generalisation",
-	"G. Kasi Viswanadham", "", 2024, 36, "Submitted");
-	nbrp();      </script>
+    <li class="paper"><script language="javascript">
+	ToAppear("The trigonometric polynomial on sums of two squares, an additive problem and generalisation",
+		 "G. Kasi Viswanadham", "",
+		 "https://www.ams.org/publications/journals/journalsframework/abouttran",
+		 "Transactions of the American Math. Soc.", "vol. no ",
+		 2025, "38pp", "");
+	nbr();      </script>
       <div class="resumecontent">
 	<img src="../trucs/kasi-viswanadh.jpeg" height="110px"
 	     title="Kasi Viswanadh Gopajosyula">
@@ -1162,6 +1165,36 @@ $
   (resp. $b_2$) belongs to a general subset $\mathfrak{B}_1$
   (resp. $\mathfrak{B}_2$) of $\mathfrak{B}$ of relative positive density.
   We further show that the above bound is effective when $0\le A < 1/2$.
+	</div>
+  </li>
+
+<!-- ======================================================================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("Cusps of primes in dense subsequences -- Bypassing $W$-trick",
+	"", "RestrictionTheory-AA-NSB-26.pdf", 2024, 25, "Submitted");
+	nbrp();      </script>
+      <div class="resumecontent">
+	  Let the $A$-cusps of a dense subset
+  $\mathcal{P}^*\in[\sqrt{N},N]$ of primes be points
+  $\alpha\in\RsurZ$ that are such that
+  $|\sum_{\substack{p\in\mathcal{P}^*}} e(\alpha p)|\ge
+  |\mathcal{P}^*|/A$. We establish that any $(1/N)$-well spaced subset
+  of $A$-cusps contains at most $20A^2K\log(2A)$ points, where
+  $K=N/(|\mathcal{P}^*|\log N)$.  We further show that any
+  $B$-cusps~$\xi$ is accompanied, when $B\le \sqrt{A}$, by a large
+  proportion of $A$-cusps of the shape $\xi+(a/q)$.  We conclude this
+  study by showing that, given $A\ge2$, the characteristic function
+  $\1_{\mathcal{P}^*}$ may be decomposed in the form
+  $\1_{\mathcal{P}^*}=(V(z_0)\log N)^{-1}f^\flat +f^\sharp$ where the
+  trigonometric polynomial of $f^\sharp$ takes only values
+  $\le |\mathcal{P}^*|/A$, and~$f^\flat$ is a bounded non-negative
+  function supported on the integers prime to $M$; the parameters
+  $z_0$ and $M$ are given in terms of~$A$, while
+  $V(z_0)=\prod_{p<z_0}(1-1/p)$. The function $f^\flat$ satisfies more
+  regularity properties. In particular, its density with respect to
+  the integers $\le N$ and coprime to~$M$ is again~$K$. This transfers
+  questions on~$\mathcal{P}^*$ to problems on integers coprime to the
+  modulus~$M$.
 	</div>
   </li>
 
