--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1176,7 +1176,7 @@ $
       <div class="resumecontent">
 	  Let the $A$-cusps of a dense subset
   $\mathcal{P}^*\in[\sqrt{N},N]$ of primes be points
-  $\alpha\in\RsurZ$ that are such that
+  $\alpha\in\mathbb{R}/\mathbb{Z}$ that are such that
   $|\sum_{\substack{p\in\mathcal{P}^*}} e(\alpha p)|\ge
   |\mathcal{P}^*|/A$. We establish that any $(1/N)$-well spaced subset
   of $A$-cusps contains at most $20A^2K\log(2A)$ points, where
@@ -1184,8 +1184,8 @@ $
   $B$-cusps~$\xi$ is accompanied, when $B\le \sqrt{A}$, by a large
   proportion of $A$-cusps of the shape $\xi+(a/q)$.  We conclude this
   study by showing that, given $A\ge2$, the characteristic function
-  $\1_{\mathcal{P}^*}$ may be decomposed in the form
-  $\1_{\mathcal{P}^*}=(V(z_0)\log N)^{-1}f^\flat +f^\sharp$ where the
+  $1_{\mathcal{P}^*}$ may be decomposed in the form
+  $1_{\mathcal{P}^*}=(V(z_0)\log N)^{-1}f^\flat +f^\sharp$ where the
   trigonometric polynomial of $f^\sharp$ takes only values
   $\le |\mathcal{P}^*|/A$, and~$f^\flat$ is a bounded non-negative
   function supported on the integers prime to $M$; the parameters
