--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1181,20 +1181,20 @@ $
   |\mathcal{P}^*|/A$. We establish that any $(1/N)$-well spaced subset
   of $A$-cusps contains at most $20A^2K\log(2A)$ points, where
   $K=N/(|\mathcal{P}^*|\log N)$.  We further show that any
-  $B$-cusps~$\xi$ is accompanied, when $B\le \sqrt{A}$, by a large
+  $B$-cusps $\xi$ is accompanied, when $B\le \sqrt{A}$, by a large
   proportion of $A$-cusps of the shape $\xi+(a/q)$.  We conclude this
   study by showing that, given $A\ge2$, the characteristic function
   $1_{\mathcal{P}^*}$ may be decomposed in the form
   $1_{\mathcal{P}^*}=(V(z_0)\log N)^{-1}f^\flat +f^\sharp$ where the
   trigonometric polynomial of $f^\sharp$ takes only values
-  $\le |\mathcal{P}^*|/A$, and~$f^\flat$ is a bounded non-negative
+  $\le |\mathcal{P}^*|/A$, and $f^\flat$ is a bounded non-negative
   function supported on the integers prime to $M$; the parameters
-  $z_0$ and $M$ are given in terms of~$A$, while
-  $V(z_0)=\prod_{p<z_0}(1-1/p)$. The function $f^\flat$ satisfies more
+  $z_0$ and $M$ are given in terms of $A$, while
+  $V(z_0)=\prod_{p < z_0}(1-1/p)$. The function $f^\flat$ satisfies more
   regularity properties. In particular, its density with respect to
-  the integers $\le N$ and coprime to~$M$ is again~$K$. This transfers
-  questions on~$\mathcal{P}^*$ to problems on integers coprime to the
-  modulus~$M$.
+  the integers $\le N$ and coprime to $M$ is again $K$. This transfers
+  questions on $\mathcal{P}^*$ to problems on integers coprime to the
+  modulus $M$.
 	</div>
   </li>
 
@@ -1279,7 +1279,7 @@ $
       "http://dx.doi.org/10.7169/facm/1277811637");
       nbr();</script>
     <div class="resumecontent">We show that any $L$-function attached
-      to a non-exceptionnal Hecke Grossencharakter~$\Xi$&nbsp;  may be
+      to a non-exceptionnal Hecke Grossencharakter $\Xi$&nbsp;  may be
       approximated by a truncated Euler product when $s$&nbsp;  lies near the
       line $\Re s=1$. This leads to some refined bounds on $L(s,\Xi)$.
     </div>
@@ -1412,7 +1412,7 @@ $
 	nbr();      </script>
       <div class="resumecontent">
        We provide explicit bounds for the number of integral ideals of
-  norms at most~$X$ is $\mathbb{Q}[\sqrt{d}]$ when $d < 0$ is a
+  norms at most $X$ is $\mathbb{Q}[\sqrt{d}]$ when $d < 0$ is a
   fundamendal discriminant with an error term of size
   $\mathcal(X^{1/3})$. In particular, we prove that, when $\chi$
   is the non-principal character modulo 3 and $X\ge1$, we have
@@ -1420,7 +1420,7 @@ $
     =
     \frac{\pi X}{3\sqrt{3}}
     +\mathcal{O}^*(1.94\,X^{1/3})$, and that , when $\chi$
-  is the non-principal character modulo~$4$ and $X\ge1$, we have
+  is the non-principal character modulo $4$ and $X\ge1$, we have
   $\sum_{n\le X}(1\star\chi)(n)
     = \frac{\pi X}{4} +\mathcal{O}^*( 1.4\,X^{1/3})$.
     </div>
@@ -1788,7 +1788,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       x}a_n$&nbsp;  together with
       $\frac{1}{2i\pi}\int_{\kappa-iT}^{\kappa+iT}F(z)x^zdz/z$, where
       $F(z)=\sum_{n\ge1}a_n/n^z$&nbsp;  and $\kappa$&nbsp;  is a parameter strictly
-      larger than the abcissa of absolute convergence of~$F$.
+      larger than the abcissa of absolute convergence of $F$.
     </div>
   </li>
 
@@ -1821,7 +1821,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       Hypothesis that for every non-constant integer valued polynomial
       $f$, for every positive $\delta$, and almost every prime $q$&nbsp;  in $[Q,2Q]$,
 		  the number of primes from the interval $[x,x+x^{\frac{1}2+\delta}]$
-		  that are values of $f$&nbsp;  modulo~$q$&nbsp;  is the expected one, provided $Q$
+		  that are values of $f$&nbsp;  modulo $q$&nbsp;  is the expected one, provided $Q$
 		  is not more than $x^{\frac{2}{3}-\epsilon}$. We obtain this via a
 		  variant of the classical truncated Perron's formula for the partial
 		  sums of the coefficients of a Dirichlet series.
@@ -1962,14 +1962,14 @@ the trigonometric polynomial over a subset of density of the primes has some add
 subsets of densities in $\mathbb{Z}/{N}\mathbb{Z}$ but in a weaker form.
 To do so, we prove large sieve inequalities for \emph{dissociate sets}
 $\mathcal{X}$ of circle 
-points and functions $f$ whose support~$S$ is finite and
+points and functions $f$ whose support $S$ is finite and
 respectively in an interval, in
 the set of primes or in the set of squares. Set
 $T(f,x)=\sum_{n}f(n)\exp(2i\pi nx)$. These inequalities are of
 the shape $\sum_{x\in\mathcal{X}}|T(f,x)|^2\ll
 |S|\|f\|_2^2\log(8R/|S|)$ where $R$ is respectively $N$, $N/\log
 N$ and $\sqrt{N}$. The implied constants depend on
-the spacement between sumsets of~$\mathcal{X}$.
+the spacement between sumsets of $\mathcal{X}$.
       </div>
     </li>
 
@@ -2095,7 +2095,7 @@ the spacement between sumsets of~$\mathcal{X}$.
       the changes of sign of the Moebius function. It is in particular
       proven that $|G_1(D)-\log D-c_0|\le 4/\sqrt{D}$&nbsp;  and $|G_1(D)-\log
       D-c_0|\le 21/(\sqrt{D}\log D)$&nbsp;  when $D>1$, for a suitable
-      constant~$c_0$.
+      constant $c_0$.
     </div>
   </li>
    <!-- ============================= -->
