--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -899,8 +899,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
             "From-explicit-estimates-for-the-primes-to-explicit-estimates-for-the-Mobius-function-II-12.pdf",
 	    "http://www.functiones.amu.edu.pl/",
 	    "Functiones et Approximatio",
-	    "vol. ?", 2025, "7pp",
-	    "http://dx.doi.org/");
+	    "vol. ?", 2025, "1--19",
+	    "http://dx.doi.org/10.7169/facm/250121-19-5");
       nbr();</script>
     <div class="resumecontent">
       <img src="../trucs/Sebastian.jpg" width="128px"
@@ -961,13 +961,13 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   </li>
  
   <li class="paper"><script language="javascript">
-      Paper("An explicit harmonic $L^2$-bound for the Barban \& Vehov weights",
+      Paper("An $L^2$-bound for the Barban \& Vehov weights",
 	       "Sebastian Zuniga Alterman",
                "BV-BV-09.pdf",
 	    "http://www.functiones.amu.edu.pl/",
 	    "Functiones et Approximatio",
-	    "vol. ?", 2025, "16pp",
-	    "http://dx.doi.org/");
+	    "vol. ?", 2025, "1--8",
+	    "http://dx.doi.org/10.7169/facm/241018-19-5");
       nbr();</script>
     <div class="resumecontent">
       <img src="../trucs/Sebastian.png" width="128px"
@@ -977,7 +977,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       \sum_{n\le
       N}\Bigl(\sum_{\substack{d|n}}\lambda(d)\Bigr)^2/n
       \le
-      3.1\,\frac{\log N}{\log (z_2/z_1)}
+      3.09\,\frac{\log N}{\log (z_2/z_1)}
       \frac{1.301(1+\tau^2)+1.084(1+\tau)-0.116}{\tau-1}
       $
       when $N\ge z_1\ge100$ and  $z_2=z_1^\tau$ for some $\tau>1$. 
@@ -1406,7 +1406,7 @@ $
   <!-- ============================= -->
     <li class="paper"><script language="javascript">
 	ToAppear("Explicit count of integral ideals of an imaginary quadratic field",
-		 "", "ConvolutionAndVoronoi-10-AMQ.pdf",
+		 "", "ConvolutionAndVoronoi-10-AMQ-official.pdf",
 		 "https://link.springer.com/journal/40316/articles",
 		 "Annales math&eacute;matiques du Qu&eacute;bec",2025, 11);
 	nbr();      </script>
