--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1354,7 +1354,7 @@ $
 	$\prod_{p\ge2}(1-1/p^4)/(1+2/p^2-3/p^3)$ to one thousand
 	certified digits in a very fast manner. Several similar Euler
 	products with rational fractions and added congruence
-	conditions on the summing primes are also available, see the
+	condition on the summing prime are also available, see the
 	<a href="https://archimede-institut.github.io/sage-euler-product/tutorial/index.html">Tutorial</a>.  This
 	software emerges from the paper 'Fast multi-precision
 	computation of some Euler products'.
@@ -2334,18 +2334,19 @@ analytic conductor of $f$ for some specific choices of $I$.
 	  <font color="red">13</font>
 	  &nbsp;&nbsp;&nbsp;
 	  &#x266F; co-authors:
-	  <font color="red">40</font>
+	  <font color="red">41</font>
 	  &nbsp;&nbsp;&nbsp;
 	  &#x266F; languages for papers: <font color="red">3</font>
 	  <br>
-	    <font size=-1><a href="../trucs/Collaborators2025.png">
-	  <sl> Repartition my co-authors per country (2025)
-	  </sl>
-      </a>
-      &nbsp;&nbsp;&nbsp;&nbsp;
+	    <font size=-1>
       <a href="../trucs/Journals2025.png">
 	  <sl> Countries of journals where I published (2025)
-	  </sl></font>
+	  </sl>
+	   &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="../trucs/Collaborators2025.png">
+	  <sl> Repartition my co-authors per country (2025)
+	  </sl>
+      </a></font>
       </a>
 </center>
     <br>
