--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2344,7 +2344,7 @@ analytic conductor of $f$ for some specific choices of $I$.
 	  </sl>
 	   &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="../trucs/Collaborators2025.png">
-	  <sl> Repartition my co-authors per country (2025)
+	  <sl> Repartition of my co-authors per country (2025)
 	  </sl>
       </a></font>
       </a>
