--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1139,10 +1139,10 @@ $
         <!-- ============================= -->
     <li class="paper"><script language="javascript">
 	ToAppear("The trigonometric polynomial on sums of two squares, an additive problem and generalisation",
-		 "G. Kasi Viswanadham", "",
+		 "G. Kasi Viswanadham", "B2Vinogradov-Arxiv.pdf",
 		 "https://www.ams.org/publications/journals/journalsframework/abouttran",
-		 "Transactions of the American Math. Soc.", "vol. no ",
-		 2025, "38pp", "");
+		 "Transactions of the American Math. Soc.",
+		 2025, 38);
 	nbr();      </script>
       <div class="resumecontent">
 	<img src="../trucs/kasi-viswanadh.jpeg" height="110px"
